--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.19.1",
+    "express": "^4.21.2",
     "forever": "^4.0.3",
+    "googleapis": "^39.2.0",
+    "http": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "mysql": "^2.18.1",
     "node-fetch": "^3.3.2"
